--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -38,6 +38,8 @@ div.logo {
      background: #003 url('images/darkbluebg.png');
      width: 175px;
      -moz-box-shadow: inset 0px 0px 1px 0px #009;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #009;
+     box-shadow: inset 0px 0px 1px 0px #009;
 }
 
 div.toolbar {
@@ -100,28 +102,103 @@ div.routersummary {
      border-radius: 4px;
      float: left;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;     
+     box-shadow: inset 0px 0px 1px 0px #eef;
 }
 
 div.routersummary input[type=text] {
      text-align: right !important;
      -moz-box-shadow: inset 1px 1px 1px 0px #000;
+     -khtml-box-shadow: inset 1px 1px 1px 0px #000;     
+     box-shadow: inset 1px 1px 1px 0px #000;     
 }
 
 div.routersummary hr {
      color: #99f;
      background: #99f;
-     height: 1px;
-     border-bottom: 1px outset #bbf;
-     margin: 5px -10px 4px -10px;
+     height: 2px;
+     border-bottom: 1px solid #99f;
+     margin: 8px -10px 7px -10px;
+     -moz-box-shadow: inset 0px 1px 1px 1px #001;
 }
 
-div.routersummary hr {
-     color: #bbf;
-     background: #bbf;
-     height: 2px;
-     border-bottom: 1px outset #bbf;
-     margin: 8px -10px 7px -10px;
-     -moz-box-shadow: inset 0px -4px 2px 1px #001;
+div.routersummary h3 {
+     border: 0px solid #f00;
+/*     border-bottom: 1px solid #99f !important;*/
+     font-size: 10pt;
+     letter-spacing: 0.05em;
+     margin: -7px -9px -10px -9px;
+     padding: 5px 0px 5px 0px;
+     background: #007;
+     text-transform: uppercase;
+     -moz-border-radius: 0;
+     -khtml-border-radius: 0;
+     border-radius: 0;
+}
+
+div.routersummary h4 {
+     border: 0px solid #f00;
+     border-bottom: 0 !important;
+     font-size: 9pt;
+     letter-spacing: 0.05em;
+     margin: -7px -9px -10px -9px !important;
+     padding: 2px 3px 5px 3px;
+     background: #005;
+     text-transform: capitalize;
+     text-decoration: none !important;
+     color: #2b2;
+}
+
+div.routersummary table {
+     border: 0;
+     text-align: center !important;
+     margin: -5px -5px;
+     width: 185px !important;
+     overflow: hidden;
+     font-size: 8pt;
+     padding: 0px -10px;
+     background-image: none !important;
+     background-color: transparent !important;
+}
+
+div.routersummary tr {
+     background-image: none !important;
+     background-color: transparent !important;
+     border: 0 !important;
+}
+
+div.routersummary form {
+     margin-top: 8px;
+}
+
+div.routersummary p {
+     padding: 0;
+}     
+
+div.routersummary a:link, div.routersummary a:visited {
+     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.3);
+}
+
+div.routersummary a:hover {
+     text-shadow: 0px 0px 1px rgba(255, 96, 0, 0.7);
+     color: #f60;
+}
+
+div.routersummary td {
+     padding: 2px 4px;
+     background-image: none !important;
+     border: 0 !important;
+}
+
+
+div.routersummary tr:nth-child(even) {
+     background-color: #f60;
+     background-image: none !important;
+}
+
+div.routersummarytr:nth-child(odd) {
+     background-color: #f00;
+     background-image: none !important;
 }
 
 div.warning {
@@ -139,6 +216,8 @@ div.warning {
      background-position:15px center;
      background-repeat:no-repeat;
      -moz-box-shadow: inset 0px 0px 0px 1px #f00;
+     -khtml-box-shadow: inset 0px 0px 0px 1px #f00;
+     box-shadow: inset 0px 0px 0px 1px #f00;          
      word-wrap: break-word;
 }
 
@@ -170,6 +249,8 @@ div.news {
      -khtml-border-radius: 4px;
      text-align: justify;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
 }
 
 div.news li {
@@ -193,6 +274,8 @@ div.confignav {
      font-weight: bold !important;
      line-height: 160% !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
 }
 
 div.configure {
@@ -205,6 +288,8 @@ div.configure {
      border: 1px solid #99f;
      background: #003 url(images/darkbluebg.png);
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;     
 }
 
 div.messages {
@@ -216,6 +301,8 @@ div.messages {
      border: 1px solid #99f;
      background: #008 url('images/lightbluetile.png');
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
 }
 
 div.messages span.error {
@@ -245,6 +332,8 @@ div.graphspanel {
      border: 1px solid #99f;
      background: #003 url(images/darkbluebg.png);
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
 }
 
 div.graphspanel img {
@@ -254,6 +343,8 @@ div.graphspanel img {
      text-align: center !important;
      background: #002;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
      opacity: 0.9;
 }
 
@@ -264,6 +355,8 @@ div.graphspanel img:hover {
      text-align: center !important;
      background: #002;
      -moz-box-shadow: inset 0px 0px 1px 1px #f60;
+     -khtml-box-shadow: inset 0px 0px 1px 1px #f60;
+     box-shadow: inset 0px 0px 1px 1px #f60;
      opacity: 1;
 }
 table {
@@ -412,6 +505,8 @@ h1 {
      white-space: normal;
      background: #004 url('images/darkbluebg.png');
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
      border: 1px solid #99f;
      border-radius: 4px;
      -moz-border-radius: 4px;
@@ -434,6 +529,8 @@ h2 {
      vertical-align: middle;
      margin: 25px 0 20px 0 !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
      word-wrap: break-word;
 }
 
@@ -483,6 +580,8 @@ button, button:visited {
      vertical-align: middle;
      min-width: 76px;
      -moz-box-shadow: inset 0px 1px 1px 0px #55f;
+     -khtml-box-shadow: inset 0px 1px 1px 0px #55f;
+     box-shadow: inset 0px 1px 1px 0px #55f;
      background: #003;
      color: #99f;
 }
@@ -490,6 +589,8 @@ button, button:visited {
 button:hover {
      border: 1px solid #f60;
      -moz-box-shadow: inset 0px 1px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 1px 1px 0px #eef;
+     box-shadow: inset 0px 1px 1px 0px #eef;
      background: #001;
      color: #f60;
 }     
@@ -499,6 +600,8 @@ button:active {
      background: #f60;
      color: #fff;
      -moz-box-shadow: inset 0px 0px 0px 0px #f60;
+     -khtml-box-shadow: inset 0px 0px 0px 0px #f60;
+     box-shadow: inset 0px 0px 0px 0px #f60;
 }
 
 .underline {
@@ -533,6 +636,8 @@ sidebarlogo {
 input {
      border: 1px outset #55f;
      -moz-box-shadow: inset 0px 1px 1px 0px #55f;
+     -khtml-box-shadow: inset 0px 1px 1px 0px #55f;
+     box-shadow: inset 0px 1px 1px 0px #55f;
      background: #003;
      color: #99f;
      margin: 5px;
@@ -550,6 +655,8 @@ input:hover {
      color: #f60;
      border: 1px solid #f60;
      -moz-box-shadow: inset 0px 1px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 1px 1px 0px #eef;
+     box-shadow: inset 0px 1px 1px 0px #eef;
 }
 
 input:active {
@@ -576,6 +683,8 @@ input[type=text] {
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      -moz-box-shadow: inset 1px 1px 1px 0px #000;
+     -khtml-box-shadow: inset 1px 1px 1px 0px #000;
+     box-shadow: inset 1px 1px 1px 0px #000;
 }
 
 input[type=text]:active, input[type=text]:hover {
@@ -641,6 +750,8 @@ form {}
      padding: 7px;
      background: #004;
      -moz-box-shadow: inset 0px 0px 0px 1px #009;
+     -khtml-box-shadow: inset 0px 0px 0px 1px #009;
+     box-shadow: inset 0px 0px 0px 1px #009;
 }
 
 .joblog {
@@ -655,6 +766,8 @@ form {}
      -khtml-border-radius: 4px;
      text-align: justify;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
+     box-shadow: inset 0px 0px 1px 0px #eef;
      overflow-x: scroll; /* Opera fix */
  }
  
