--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -79,10 +79,10 @@ div.routersummaryouter {
      float: left;
      width: 215px;
      margin: 0 0 10px 20px;
-     padding: 0px 0 0 0;
+     padding: 0;
      border: 0;
      clear: left;/* fixes a bug in Opera */
-     text-align: center;
+     text-align: center !important;
      display: block;
 }
 
@@ -90,7 +90,7 @@ div.routersummary {
 /*  margin: 0px 20px 20px 0px; */
      width: 175px;
      padding: 10px;
-     text-align: center;
+     text-align: center !important;
      border: 1px solid #000033;
      background: #ddf url('images/lightbluetile.png');
      color: #000;
@@ -118,6 +118,82 @@ div.routersummary hr {
      -moz-box-shadow: inset 0px 1px 1px 1px #001;
 }
 
+div.routersummary h3 {
+     border: 0px solid #f00;
+/*     border-bottom: 1px solid #99f !important;*/
+     font-size: 10pt;
+     letter-spacing: 0.05em;
+     margin: -7px -9px -7px -9px;
+     padding: 5px 0px 5px 0px;
+     background: #c5d5fb;
+     text-transform: uppercase;
+}
+
+div.routersummary h4 {
+     border: 0px solid #f00;
+     border-bottom: 0 !important;
+     font-size: 9pt;
+     letter-spacing: 0.05em;
+     margin: -7px -9px -7px -9px !important;
+     padding: 2px 3px 3px 3px;
+     background: #c1d1f7;
+     text-transform: capitalize;
+     text-decoration: none !important;
+     color: #2b2;
+}
+
+div.routersummary table {
+     border: 0;
+     text-align: center !important;
+     margin: -5px -5px;
+     width: 185px !important;
+     overflow: hidden;
+     font-size: 8pt;
+     padding: 0px -10px;
+     background-image: none !important;
+     background-color: transparent !important;
+}
+
+div.routersummary tr {
+     background-image: none !important;
+     background-color: transparent !important;
+     border: 0 !important;
+}
+
+div.routersummary form {
+     margin-top: 8px;
+}
+
+div.routersummary p {
+     padding: 0;
+}     
+
+div.routersummary a:link, div.routersummary a:visited {
+     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.3);
+}
+
+div.routersummary a:hover {
+     text-shadow: 0px 0px 1px rgba(255, 96, 0, 0.7);
+     color: #f60;
+}
+
+div.routersummary td {
+     padding: 2px 4px;
+     background-image: none !important;
+     border: 0 !important;
+}
+
+
+div.routersummary tr:nth-child(even) {
+     background-color: #f60;
+     background-image: none !important;
+}
+
+div.routersummarytr:nth-child(odd) {
+     background-color: #f00;
+     background-image: none !important;
+}
+
 div.warning {
      margin: 5px 20px 10px 240px;
      padding: 0px 25px 20px 75px;
@@ -143,6 +219,7 @@ div.main {
      text-align: left;
      color: #001;
      width: auto;
+     min-width: 500px;
 }
 
 div.main hr, hr {
@@ -216,6 +293,13 @@ div.news li {
      opacity: 0.8;
 }
 
+div.news h4 {
+     border-bottom: 0px;
+     padding: 0;
+     margin: 0 0 -10px 0;
+     font-size: 11pt;
+}
+
 div.confignav {
      padding: 15px 10px !important;
      margin: 0 0 25px 0;
@@ -228,6 +312,7 @@ div.confignav {
      font-weight: bold !important;
      line-height: 160% !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #002;
+     min-width: 400px;
 }
 
 div.configure {
