Revert xhtml regressions in i2ptunnel code; fixes for various validation issues.
Monotone-Parent: 7725da34bf928ec3a2f0d2d6511e0c44647ee423
Monotone-Revision: 2b86c54f6536602add1ed00524d6b925f6cb1ab8

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-17T20:17:30
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -20,7 +20,8 @@ img {
 pre {
      overflow: auto;
      font-size: 8pt !important;
-     width: 100%;
+     width: 95%;
+     padding-top: 10px;
 }
 
 div.logo {
