--- a/installer/resources/themes/console/classic/i2ptunnel.css
+++ b/installer/resources/themes/console/classic/i2ptunnel.css
@@ -110,9 +110,11 @@
 }
 
 #tunnelListPage textarea {
-    width : 750px;
-    height : 100px;
+    width : 100%;
+    height : 88px;
     padding : 0 0 0 4px;
+    color: green;
+    margin-bottom: 7px;
 }
 
 #tunnelListPage .footer .control {
