Remove extra whitespace in English readme; fix a couple of validation errors.
Monotone-Parent: 5cae2ecbdef5069d67d941277ae9290175036753
Monotone-Revision: 6cb0fc740721e37e0951adb71c00dc292b8181f6

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-18T12:45:33
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -1,4 +1,4 @@
-/* Optimised for less capable browers and system specifications */
+/* Optimised for less capable browsers and system specifications */
 
 body {
      margin: 2px 0 0 2px;
@@ -272,7 +272,7 @@ div.news li {
      list-style: none;
      margin: -15px 15px -20px -20px;
      padding: 0px 0 15px 0;
-     border-bottom: 2px solid #cc7;
+     border-bottom: 5px solid #cc7;
      border-top: 0px solid #cc7;     
      padding: 3px 5px 5px 5px;
      font-size: 12pt;
