Optimize space layout on i2psnark ui.
Monotone-Parent: f643f5e88bbfe99107fc8f717b4d6ab2400e9195
Monotone-Revision: e2ee75916f2ff6bd698585808a81071b44c978b1

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-19T18:39:30
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -139,8 +139,8 @@ td {
 	color:#310;
   min-width: 800px !important;
 /*  max-width: 800px !important; */
-  margin: 10px;
-  padding: 10px 10px 5px 10px;
+  margin: 5px 0px;
+  padding: 10px 10px 0px 10px;
   -moz-border-radius: 4px;
   -khtml-border-radius: 4px;
   border-radius: 4px;
@@ -292,7 +292,7 @@ div.addtorrentsection {
 }
 
 div.configsection {
-  margin: 0 0 10px 0;
+  margin: 0;
   padding: 10px;
   background: #ffe;
   border: 1px solid #001;
