Slight margin adjustments for the light theme.
Monotone-Parent: 43d6c0d392b8c00316ea0d05d40c74ab55513b54
Monotone-Revision: 39a860707b71f99b41a8c4f5cf9e025e72907fa5

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-21T00:27:32
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -23,6 +23,7 @@ pre {
      text-align: left;
      font: 8pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      color: #333;
+     margin: 10px;
 }
 
 div.logo {
