Polish the console 404 error messages.
Monotone-Parent: 39a860707b71f99b41a8c4f5cf9e025e72907fa5
Monotone-Revision: a176d86cca5d9a6138a1273e8d26dbffc35414ff

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-22T12:15:19
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -103,6 +103,28 @@ div.warning hr {
      margin: 5px 0;
 }
 
+/* console error messages */
+
+div.sorry {
+     padding: 20px;
+     background: #ddf;
+     margin: -2px 1px 0 195px;
+     border: 5px solid #bbf;
+     text-align: justify;
+     -moz-box-shadow: inset 0px 0px 0px 1px #d00;
+     word-wrap: break-word;
+     font-weight: bold;
+     color: #001;
+}
+
+div.sorry hr {
+     color: #001;
+     background: #001;
+     height: 1px;
+     border: 1px solid #001;
+     margin: 10px 0;
+}
+
 div.toolbar {
      margin: 0em 0em 2em 0em;
      font-weight: bold;
