--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -1,7 +1,7 @@
 /* Not yet complete. Subject to flux and change. dr|z3d - 07.25.09 */
 
 body {
-     margin: 15px 0px 0 5px;
+     margin: 15px 0 0 10px;
      padding: 0em;
      text-align: center;
      background: #eef;
@@ -184,7 +184,6 @@ div.routersummary td {
      border: 0 !important;
 }
 
-
 div.routersummary tr:nth-child(even) {
      background-color: #f60;
      background-image: none !important;
@@ -194,6 +193,8 @@ div.routersummarytr:nth-child(odd) {
      background-color: #f00;
      background-image: none !important;
 }
+
+/* proxy error messages */
 
 div.warning {
      margin: 5px 20px 10px 240px;
@@ -212,6 +213,34 @@ div.warning {
      -moz-box-shadow: inset 0px 0px 1px 0px #d00;
      word-wrap: break-word;
 }
+
+/* console error messages */
+
+div.sorry {
+     margin: 5px 15px 10px 220px;
+     padding: 20px 20px 20px 75px;
+     background: #ffb;
+     border: 1px solid #002;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     text-align: justify;
+     background-image: url("images/errortriangle.png");
+     background-position: 15px center;
+     background-repeat: no-repeat;
+     -moz-box-shadow: inset 0px 0px 0px 1px #d00;
+     word-wrap: break-word;
+     font-weight: bold;
+     color: #331;
+}
+
+div.sorry hr {
+     color: #552;
+     background: #552;
+     height: 1px;
+     border: 1px solid #552;
+     margin: 10px 0;
+}     
 
 div.main {
      margin: 0px 0px 20px 195px;
@@ -409,7 +438,7 @@ table {
      border-collapse: collapse;
      width: 100%;
      border: 1px solid #000022;
-     margin: 0px -15px 5px 0px;
+     margin: 10px -15px 5px 0px;
      cell-padding: 1px;
      font-size: 7pt;
      background: #b4c8ff url('images/tabletitlelight.png') repeat-x;
@@ -566,7 +595,7 @@ h2 {
      border-radius: 4px;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
-     margin: 15px 0px 15px 0 !important;
+     margin: 15px 0px 10px 0 !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #002;
      word-wrap: break-word;
 }
