Rejig netdb.jsp into tables; sidepanel logo refresh.
Monotone-Parent: 3fe53db996219411bd43e0f1d9f37121d55e66ff
Monotone-Revision: 1b1c377c45e8746e4e04afc47cde55a03b859f32

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-28T03:12:23
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -145,7 +145,7 @@ div.routersummary {
      width: 185px;
      color: inherit;
      margin: 0;
-     padding: 7px 1px;
+     padding: 10px 1px 7px 1px;
      text-align: center !important;
      border: 5px solid #bbf;
      font-size: 9pt;
