--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -205,7 +205,7 @@ div.routersummarytr:nth-child(odd) {
 
 div.warning {
      margin: 5px 20px 10px 240px;
-     padding: 0px 25px 20px 75px;
+     padding: 5px 25px 20px 75px;
      background: #005;
      border: 1px solid #99f;
      text-align: left;
@@ -268,11 +268,12 @@ div.main textarea {
 }
 
 div.news {
-     margin: 0px 15px 20px 220px;
+     margin: 15px 15px 15px 220px;
      padding: 20px 30px 20px 30px;
      border: 1px solid #99f;
      background: #004;
-     background: url("images/darkbluetile.png");
+     background-image: -moz-linear-gradient(top, bottom, from(#003), to(#005), color-stop(30%, #003), color-stop(100%, #001));
+/*     background: #003 url("images/darkbluetile.png");*/
      color: #eef;
      border-radius: 4px;
      -moz-border-radius: 4px;
@@ -542,7 +543,8 @@ h1 {
      letter-spacing: 0.15em;
      text-shadow: 0px 0px 3px rgba(255, 255, 255, 0.8);
      white-space: normal;
-     background: #004 url('images/darkbluebg.png');
+     background: #002 //url('images/darkbluebg.png');
+     background-image: -moz-linear-gradient(top, bottom, from(#001), to(#003), color-stop(30%, #001), color-stop(100%, #001));
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
      -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
      box-shadow: inset 0px 0px 1px 0px #eef;
@@ -558,7 +560,8 @@ h2 {
      color: #fff;
      text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.5);
      letter-spacing: 0.05em;
-     background: #003 url('images/titletile.png');
+     background: #002; // url('images/darkbluebg.png');
+     background-image: -moz-linear-gradient(top, bottom, from(#001), to(#003), color-stop(30%, #001), color-stop(100%, #001));
      padding: 5px 10px 8px 10px;
      wordwrap: none;
      border: 1px solid #99f;
@@ -590,7 +593,7 @@ h3 {
      border-radius: 0 4px 4px 0;
      -moz-border-radius: 0 4px 4px 0;
      -khtml-border-radius: 0 4px 4px 0;
-     background: #007;
+     background: #002;
 /*     background: url(images/lightbluebg.png);*/
 }
 
@@ -795,7 +798,7 @@ form {}
 
 .joblog {
      margin: 	15px 0 15px 0;
-     padding: 20px !important;
+     padding: 5px 20px 10px 20px !important;
      border: 1px solid #99f;
      background-color: #004;
      background: url("images/darkbluebg.png");
