More minor theme embellishments.
Monotone-Parent: de249007f709f415ccb2f090ef084b27be21cbec
Monotone-Revision: 9de971574caf7cd8038c5f2471c692ff17bf03f2

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-04T18:02:28
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -310,7 +310,7 @@ div.confignav {
 }
 
 div.configure {
-     padding: 0 15px 15px 15px;
+     padding: 5px 15px 15px 15px;
      margin: 10px 0px;
      background: #005;
      -moz-border-radius: 4px;
