Minor theme updates; lose whitespace in config.jsp; add license for SilkIcons.
Monotone-Parent: c03bacd7c3ed043276617cb71019d3c4b21fcc23
Monotone-Revision: 3ad948ece037941e8ef3755d3a001e44f2e37918

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-09T00:45:33
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -259,13 +259,17 @@ div.main {
      -moz-box-shadow: inset 0px 0px 0px 1px #99f;
 }
 
+div.main ul {
+     margin: 0;
+}
+
 div.main li {
-     padding-bottom: 10px;
+     padding: 0 0 5px 0;
      list-style: square;
 }
 
 div.main li:first-child {
-     padding-top: 20px;
+     padding-top: 5px;
 }
 
 div.main textarea {
