--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -68,8 +68,8 @@ div.warning {
      border: 5px solid #fb7;
      text-align: left;
      color: inherit;
-     background-image:url("../images/errortriangle.png");
-     background-position: 17px center;
+     background-image:url("../images/itoopie_sm.png");     
+     background-position: 12px center;
      background-repeat:no-repeat;
      -moz-border-radius: 15px;
      -moz-box-shadow: inset 0px 0px 0px 2px #f60;
@@ -249,7 +249,7 @@ div.warning h3 {
 
 div.main {
      margin: 0px 0px 0px 195px;
-     padding: 15px;
+     padding: 15px 15px 10px 15px;
      background: #eef;
      border: 5px solid #bbf;
      border-top: 0;
@@ -266,10 +266,12 @@ div.main ul {
 div.main li {
      padding: 0 0 5px 0;
      list-style: square;
+     word-wrap: break-word;
+     margin-right: 20px;
 }
 
 div.main li:first-child {
-     padding-top: 5px;
+     padding-top: 15px;
 }
 
 div.main textarea {
@@ -279,16 +281,17 @@ div.main textarea {
 
 div.news {
      margin: -5px 0px 0 195px;
-     padding: -10px 15px 8px 15px;
+     padding: -10px 0px 8px 0px;
      background: #ffffc0;
      border: 5px solid #bbf;
-     text-align: justify;
-     color: inherit;
+     text-align: right;
+     color: #770;
      min-width: 600px;
      padding-bottom: 8px;
      padding-left: 10px;
      padding-right: 10px;
      -moz-box-shadow: inset 0px 0px 0px 1px #99f;
+     font-size: 7pt;
 }
 
 /* convert the list entry to our title */
@@ -296,25 +299,27 @@ div.news {
 div.news li {
      text-align: justify;
      list-style: none;
-     margin: -15px 15px -20px -20px;
+     margin: -15px 15px -30px -20px;
      padding: 0px 0 15px 0;
-     border-bottom: 5px solid #cc7;
+     border-bottom: 2px dotted #cc7;
      border-top: 0px solid #cc7;     
      padding: 3px 5px 5px 5px;
-     font-size: 12pt;
+     font-size: 10pt;
      color: #540;
 }
 
 div.news p {
      color: #330;
+     font-size: 9pt;
 }
+
 div.news a:link {
-     color: #773;
+     color: #663;
      text-shadow: 0px 0px 1px rgba(128, 128, 48, 0.3);
 }
 
 div.news a:visited {
-     color: #f00 !important;
+     color: #773 !important;
      text-shadow: 0px 0px 1px rgba(128, 128, 48, 0.3);
 }
 
@@ -322,7 +327,7 @@ div.news hr {
      color: #cc7;
      background: #cc7;
      height: 2px;
-     border: 0px solid #cc7;
+     border: 0px solid #cccc77;
      margin: 5px 0;
 }
 
@@ -339,10 +344,14 @@ div.configure {
      padding: 0px 20px 0px 20px;
 }
 
+div.configure hr {
+     margin: 15px 0;
+}
+
 div.configure table {
      font-size: 9pt;
      font-weight: bold;
-     -moz-box-shadow: inset 0px 0px 1px 1px #001;
+     border: 1px solid #bbf;
 }
 
 div.configure tr, div.configure td {
@@ -367,8 +376,8 @@ div.messages {
 }
 
 div.messages li, div.messages ul {
-     padding: 15px 0 5px 5px;
-     margin: -15px 0 0 0;
+     padding: 10px 0 0 5px;
+     margin: -10px 0 0 0;
 }
 
 div.messages span.error {
@@ -397,16 +406,16 @@ h1 {
 h2 {
      font-size: 14pt;
      padding: 0px 10px 10px 10px;
-     border-bottom: 5px solid #bbf;
-     border-top: 0px solid #bbf;
+     border-bottom: 3px solid #aaf;
+     border-top: 0px solid #aaf;
      letter-spacing: 0.04em;
 }
 
 h3 {
      font-size: 12pt;
      padding: 0 10px 10px 10px;
-     border-bottom: 5px solid #bbf;
-     border-top: 0px solid #bbf;
+     border-bottom: 3px solid #aaf;
+     border-top: 0px solid #aaf;
      letter-spacing: 0.04em;
 }
 
@@ -417,7 +426,7 @@ h3 {
 
 table {
      border-collapse: collapse; 
-     border: 5px solid #bbf;
+     border: 1px solid #bbf;
      margin: 0 0 5px 0;
      cell-padding: 1px;
      font-size: 7.5pt;
@@ -442,7 +451,7 @@ th {
      background-color: #fff;
      padding: 8px 2px;
      text-align: center;
-     border-bottom: 1px solid #88f;
+     border-bottom: 1px solid #bbf;
 }
 
 tt {
@@ -466,11 +475,11 @@ tr:nth-child(odd) {
 }
 
 hr {
-     color: #bbf;
-     background: #bbf;
-     height: 5px;
-     border: 0px solid #bbf;
-     margin: 5px 0;
+     color: #aaf;
+     background: #aaf;
+     height: 3px;
+     border: 0px solid #aaf;
+     margin: 3px 0;
 }
 
 .statusnotes {
@@ -483,6 +492,53 @@ hr {
      border: 5px solid #bbf;
      border-top: 0;
      padding: 4px 0 2px 0;
+}
+
+div.joblog {
+     margin-top: -10px;
+     line-height: 130% !important;
+}
+
+div.joblog:li {
+     word-wrap: break-word !important;
+     text-align: justify !important;
+     line-height: 80% !important;
+}
+
+div.joblog:ul {
+     word-wrap: break-word !important;
+     text-align: justify;
+}
+
+div.joblog li:first-child {
+     margin-top: -10px;
+}
+div.joblog li:last-child {
+     margin-bottom: -10px;
+}
+
+div.joblog form:first-child {
+     margin-top: 10px;
+}
+
+div.joblog table {
+     margin-top: 15px;
+}
+
+div.joblog p {
+     line-height: 130%;
+}
+
+div.joblog h3 {
+     margin: -5px 0 5px 0;
+}
+
+div.joblog hr {
+     margin: 15px 0 15px;
+}
+
+div.joblog ol {
+     margin-bottom: 0px;
 }
  
 input {
@@ -565,7 +621,7 @@ tt {
 }
 
 .tablefooter {
-     border: 1px solid #88f;
+     border: 1px solid #bbf;
 }
 
 .tablefooter tr, .tablefooter td {
@@ -575,11 +631,13 @@ tt {
      line-height: 150%;
      word-wrap: nowrap;
      padding: 8px 1px;
+     border-top: 2px solid #bbf;
 }
 
 .tidylist {
      text-align: justify;
      padding-right: 30px;
+     margin-right: 20px;
 }
 
 div.graphspanel {
@@ -595,11 +653,12 @@ div.graphspanel {
 }
 
 div.graphspanel img {
-     border: 1px solid #99f;
+     border: 1px solid #77f;
      padding: 2px;
      margin: 6px;
-     background: #ddf;
-     -moz-box-shadow: inset 0px 0px 1px 1px #99f;
+     background: #ccf;
+     -moz-box-shadow: inset 0px 0px 0px 0px #002;
+     opacity: 0.9;
 }
 
 div.graphspanel img:hover {
@@ -609,10 +668,11 @@ div.graphspanel img:hover {
      text-align: center !important;
      background: #001;
      -moz-box-shadow: inset 0px 0px 2px 1px #f60;
+     opacity: 1;
 }
 
 div.graphspanel hr {
-     margin: 20px 0;
+     margin: 10px 0;
 }
 
 div.graphspanel form {
@@ -622,4 +682,5 @@ div.graphspanel form {
 
 div.graphspanel h3 {
      text-align: left;
+     margin: 10px 20px 10px 20px;
 }
