--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -154,7 +154,7 @@ div.routersummary h4 {
 div.routersummary table {
      border: 0;
      text-align: center !important;
-     margin: -1px -4px -4px -4px;
+     margin: -4px -4px -4px -4px;
      width: 185px !important;
      overflow: hidden;
      font-size: 8pt;
@@ -167,6 +167,15 @@ div.routersummary tr {
      background-image: none !important;
      background-color: transparent !important;
      border: 0 !important;
+}
+
+.tunnels {
+     margin-top: 0 !important;
+}
+
+.tunnels tr {
+     padding: 4px 0 !important;
+     margin-left: -6px !important;
 }
 
 div.routersummary form {
@@ -292,6 +301,7 @@ div.news li {
      padding: 5px 5px 5px 0;
      vertical-align: middle;
      word-wrap: break-word;
+     color: #99f;
 }
 
 div.news h4 {
@@ -532,7 +542,7 @@ a:link, h2 a:link{
 }
 
 a:visited{
-     color: #7bb;
+     color: #77f;
      text-decoration: none;
      font-weight: bold;     
      word-wrap: break-word;
