--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -161,6 +161,15 @@ div.routersummary tr {
      border: 0 !important;
 }
 
+.tunnels {
+     margin-top: 0 !important;
+     margin-left: -7px !important;
+}
+
+.tunnels tr {
+     padding: 4px 0 !important;
+}
+
 div.routersummary form {
      margin-top: 8px;
 }
@@ -259,6 +268,10 @@ div.main hr, hr {
      height: 1px;
      border: 0px solid #003;
      margin: 10px 0;
+}
+
+hr:last-child {
+     margin-top: 20px !important;
 }
 
 div.main textarea {
@@ -531,14 +544,14 @@ code {
 }
 
 a:link{
-     color: #007;
+     color: #008;
      text-decoration: none;
      font-weight: bold;
      word-wrap: break-word;
 }
 
 a:visited{
-     color: #606;
+     color: #004;
      text-decoration: none;
      font-weight: bold;
 }
@@ -863,7 +876,7 @@ div.joblog li:first-child {
      margin-top: 10px;
 }
 div.joblog li:last-child {
-     margin-bottom: -10px;
+     margin-bottom: -15px;
 }
 
 div.joblog form:first-child {
