--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -124,10 +124,10 @@ div.routersummary hr {
 
 div.routersummary h3 {
      border: 0;
-     font-size: 10pt;
+     font-size: 9.5pt;
      letter-spacing: 0.04em;
      margin: -7px -9px -10px -9px;
-     padding: 3px 0px 5px 0px;
+     padding: 3px 0 4px 0;
      background: #007;
      text-transform: uppercase;
      -moz-border-radius: 0;
@@ -154,7 +154,7 @@ div.routersummary h4 {
 div.routersummary table {
      border: 0;
      text-align: center !important;
-     margin: -4px -4px -4px -4px;
+     margin: -5px -4px -4px -4px;
      width: 185px !important;
      overflow: hidden;
      font-size: 8pt;
@@ -332,7 +332,7 @@ div.confignav {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      border: 1px solid #99f;
-     font-size: 10pt !important;
+     font-size: 9.5pt !important;
      font-weight: bold !important;
      line-height: 160% !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
@@ -556,10 +556,12 @@ a:hover{
 }
 
 .links {
-     list-style-image: url("images/link_dark.png");
-     margin: 0 5px 0 0px;
-     padding: 0px 5px;
+     padding-bottom: -2px;
      text-align: justify;
+}
+
+.links li {
+     list-style-image: url("../images/link_dark.png") !important;
 }
 
 p {
@@ -605,7 +607,7 @@ h2 {
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      vertical-align: middle;
-     margin: 15px 0 15px 0 !important;
+     margin: 15px 0 12px 0 !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #eef;
      -khtml-box-shadow: inset 0px 0px 1px 0px #eef;
      box-shadow: inset 0px 0px 1px 0px #eef;
@@ -625,12 +627,11 @@ h3 {
      border: 1px solid #99f;
      border-left: 5px solid #99f;
      padding: 3px 5px 3px 5px;
-/*     margin: 20px 0 15px 0;*/
+     margin: 12px 0 12px 0;
      border-radius: 0 4px 4px 0;
      -moz-border-radius: 0 4px 4px 0;
      -khtml-border-radius: 0 4px 4px 0;
      background: #002;
-/*     background: url(images/lightbluebg.png);*/
 }
 
 h4 {
@@ -709,6 +710,7 @@ hr {
 
 hr:last-child {
      margin-top: 20px;
+     margin-bottom: 20px !important;
 }
 
 
