--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -121,10 +121,10 @@ div.routersummary hr {
 
 div.routersummary h3 {
      border: 0;
-     font-size: 10pt;
+     font-size: 9.5pt;
      letter-spacing: 0.04em;
      margin: -7px -9px -7px -9px;
-     padding: 5px 0px 5px 0px;
+     padding: 3px 0;
      background: #c5d5fb;
      text-transform: uppercase;
      background-image: -moz-linear-gradient(top, bottom, from(#ddf), to(#c5d5fb), color-stop(25%, #c5d5fb), color-stop(100%, #ddf));
@@ -146,7 +146,7 @@ div.routersummary h4 {
 div.routersummary table {
      border: 0;
      text-align: center !important;
-     margin: -2px -4px;
+     margin: -4px -4px;
      width: 185px !important;
      overflow: hidden;
      font-size: 8pt;
@@ -162,7 +162,7 @@ div.routersummary tr {
 }
 
 .tunnels {
-     margin-top: 0 !important;
+     margin-top: -2px !important;
      margin-left: -7px !important;
 }
 
@@ -352,7 +352,7 @@ div.confignav {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      border: 1px solid #000022;
-     font-size: 10pt !important;
+     font-size: 9.5pt !important;
      font-weight: bold !important;
      line-height: 160% !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #002;
@@ -570,8 +570,8 @@ a:active{
 
 .links {
      list-style: url(images/link.png);
-     margin: 10px 5px 0 0px;
-     padding: 10px 20px 10px 30px;
+     padding-bottom: -2px;
+     text-align: justify;
 }
 
 p {
@@ -609,7 +609,7 @@ h2 {
      border-radius: 4px;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
-     margin: 15px 0px 15px 0 !important;
+     margin: 15px 0px 12px 0 !important;
      -moz-box-shadow: inset 0px 0px 1px 0px #002;
      word-wrap: break-word;
 }
@@ -626,7 +626,7 @@ h3 {
      border: 1px solid #002;
      border-left: 5px solid #002;
      padding: 3px 5px 3px 5px;
-     margin: 15px 0 15px 0;
+     margin: 12px 0 12px 0;
      border-radius: 0 4px 4px 0;
      -moz-border-radius: 0 4px 4px 0;
      -khtml-border-radius: 0 4px 4px 0;
